--- a/contract-module/base/contract-base/pom.xml
+++ b/contract-module/base/contract-base/pom.xml
@@ -32,6 +32,12 @@
 
         <dependency>
             <groupId>io.nuls.contract-module</groupId>
+            <artifactId>contract-tx</artifactId>
+            <version>0.9.11</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.nuls.contract-module</groupId>
             <artifactId>contract-ledger</artifactId>
             <version>0.9.11</version>
         </dependency>
