--- a/protocol-module/protocol/pom.xml
+++ b/protocol-module/protocol/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>network</artifactId>
             <version>0.9.11</version>
         </dependency>
+        <dependency>
+            <groupId>io.nuls.contract-module</groupId>
+            <artifactId>contract</artifactId>
+            <version>0.9.11</version>
+        </dependency>
     </dependencies>
 
 
