--- a/contract-module/base/contract-rpc/pom.xml
+++ b/contract-module/base/contract-rpc/pom.xml
@@ -42,6 +42,13 @@
             <artifactId>contract-base</artifactId>
             <version>1.0.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.nuls.ledger-module</groupId>
+            <artifactId>ledger</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
